feat: sources table for decoupling and extending
